--- a/src/app/pages/common-components/tabla/tabla.component.html
+++ b/src/app/pages/common-components/tabla/tabla.component.html
@@ -1,33 +1,30 @@
-<nb-card>
-  <nb-card-body>
-    
-    <label class="search-label" for="search">Filtrar por coincidencias:</label>
-    <input nbInput [nbFilterInput]="dataSource" id="search" class="search-input">
+<div *ngIf="showSearch">
+  <label class="search-label" for="search">Search:</label>
+  <input nbInput [nbFilterInput]="dataSource" id="search" class="search-input">
+</div>
 
-    <table [nbTreeGrid]="dataSource" [nbSort]="dataSource" (sort)="updateSort($event)">
+<table [nbTreeGrid]="dataSource" [nbSort]="dataSource" (sort)="updateSort($event)">
 
-      <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
-      <tr nbTreeGridRow [clickToToggle]="false" *nbTreeGridRowDef="let row; columns: allColumns"></tr>
+  <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
+  <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
 
-      <ng-container [nbTreeGridColumnDef]="customColumn">
-        <th nbTreeGridHeaderCell [nbSortHeader]="getSortDirection(customColumn)" *nbTreeGridHeaderCellDef>
-          {{customColumn}}
-        </th>
-        <td nbTreeGridCell *nbTreeGridCellDef="let row">
-          {{row.data[customColumn]}}
-        </td>
-      </ng-container>
+  <ng-container [nbTreeGridColumnDef]="customColumn">
+    <th nbTreeGridHeaderCell [nbSortHeader]="getSortDirection(customColumn)" *nbTreeGridHeaderCellDef>
+      {{customColumn}}
+    </th>
+    <td nbTreeGridCell *nbTreeGridCellDef="let row">
+      <ngx-fs-icon [kind]="row.data.kind" [expanded]="row.expanded"></ngx-fs-icon>
+      {{row.data[customColumn]}}
+    </td>
+  </ng-container>
 
-      <ng-container *ngFor="let column of defaultColumns; let index = index"
-                    [nbTreeGridColumnDef]="column"
-                    [showOn]="getShowOn(index)">
-        <th nbTreeGridHeaderCell [nbSortHeader]="getSortDirection(column)" *nbTreeGridHeaderCellDef>
-          {{column}}
-        </th>
-        <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
-      </ng-container>
+  <ng-container *ngFor="let column of defaultColumns; let index = index"
+                [nbTreeGridColumnDef]="column"
+                [showOn]="getShowOn(index)">
+    <th nbTreeGridHeaderCell [nbSortHeader]="getSortDirection(column)" *nbTreeGridHeaderCellDef>
+      {{column}}
+    </th>
+    <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
+  </ng-container>
 
-    </table>
-
-  </nb-card-body>
-</nb-card>
+</table>
